--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -1,20 +1,15 @@
-ext {
-    dbcpVersion = "2.9.0"
-}
-
 dependencies {
-    implementation("org.apache.commons:commons-dbcp2:${dbcpVersion}")
+    api "org.apache.commons:commons-dbcp2:${dbcpVersion}"
 
     // logging
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4jVersion}"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4jVersion}"
-    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: "${slf4jVersion}"
+    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
+    api group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4jVersion}"
+    api group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4jVersion}"
+    api group: 'org.slf4j', name: 'slf4j-log4j12', version: "${slf4jVersion}"
 
     // spark
-    compileOnly group: 'org.apache.spark', name: "spark-core_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
-    compileOnly group: 'org.apache.spark', name: "spark-sql_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
-    compileOnly group: 'org.apache.spark', name: "spark-hive_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
-    compileOnly group: 'org.apache.spark', name: "spark-hive_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
-    compileOnly group: 'org.apache.spark', name: "spark-streaming_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
+    compileOnlyApi group: 'org.apache.spark', name: "spark-core_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
+    compileOnlyApi group: 'org.apache.spark', name: "spark-sql_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
+    compileOnlyApi group: 'org.apache.spark', name: "spark-hive_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
+    compileOnlyApi group: 'org.apache.spark', name: "spark-streaming_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
 }
