--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     api "org.apache.commons:commons-dbcp2:${dbcpVersion}"
+    api group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
 
     // logging
     api group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
