Add Kafka batch source

--- a/module-core/src/main/resources/reference.conf
+++ b/module-core/src/main/resources/reference.conf
@@ -11,6 +11,8 @@ prd {
     dsMinIdle = ${?DS_MIN_IDLE}
     dsMaxWaitMillis = -1
     dsMaxWaitMillis = ${?DS_MAX_WAIT_MILLIS}
+
+    tpsMetric = "tps-metric"
 }
 
 dev {
@@ -26,6 +28,8 @@ dev {
     dsMinIdle = ${?DS_MIN_IDLE}
     dsMaxWaitMillis = -1
     dsMaxWaitMillis = ${?DS_MAX_WAIT_MILLIS}
+
+    tpsMetric = "tps-metric"
 }
 
 local {
@@ -41,4 +45,6 @@ local {
     dsMinIdle = ${?DS_MIN_IDLE}
     dsMaxWaitMillis = -1
     dsMaxWaitMillis = ${?DS_MAX_WAIT_MILLIS}
+
+    tpsMetric = "tps-metric"
 }
