--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -15,4 +15,7 @@ dependencies {
     compileOnlyApi group: 'org.apache.spark', name: "spark-hive_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
     compileOnlyApi group: 'org.apache.spark', name: "spark-streaming_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
     api group: 'org.apache.spark', name: "spark-sql-kafka-0-10_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
+
+    // integration test
+    testImplementation group: 'io.github.embeddedkafka', name: "embedded-kafka_${scalaVerisonWithoutPatch}", version: '3.3.1'
 }
