--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -16,6 +16,11 @@ dependencies {
     compileOnlyApi group: 'org.apache.spark', name: "spark-streaming_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
     api group: 'org.apache.spark', name: "spark-sql-kafka-0-10_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
 
-    // integration test
+    // test
     testImplementation group: 'io.github.embeddedkafka', name: "embedded-kafka_${scalaVerisonWithoutPatch}", version: '3.3.1'
+
+    // util
+//    api group: 'org.json4s', name: "json4s-jackson_${scalaVerisonWithoutPatch}", version: "${json4sVersion}"
+//    api group: 'org.json4s', name: "json4s-ext_${scalaVerisonWithoutPatch}", version: "${json4sVersion}"
+//    api group: 'org.json4s', name: "json4s-ast_${scalaVerisonWithoutPatch}", version: "${json4sVersion}"
 }
