--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -17,10 +17,6 @@ dependencies {
     api group: 'org.apache.spark', name: "spark-sql-kafka-0-10_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
 
     // test
-    testImplementation group: 'io.github.embeddedkafka', name: "embedded-kafka_${scalaVerisonWithoutPatch}", version: '3.3.1'
-
-    // util
-//    api group: 'org.json4s', name: "json4s-jackson_${scalaVerisonWithoutPatch}", version: "${json4sVersion}"
-//    api group: 'org.json4s', name: "json4s-ext_${scalaVerisonWithoutPatch}", version: "${json4sVersion}"
-//    api group: 'org.json4s', name: "json4s-ast_${scalaVerisonWithoutPatch}", version: "${json4sVersion}"
+    testCompileOnly group: 'io.github.embeddedkafka', name: "embedded-kafka_${scalaVerisonWithoutPatch}", version: '3.3.1'
+    testRuntimeOnly group: 'org.apache.spark', name: "spark-hive_${scalaVerisonWithoutPatch}", version: "${sparkVersion}"
 }
