Fix Stream Example App

--- a/service-example/build.gradle
+++ b/service-example/build.gradle
@@ -24,7 +24,7 @@ jar {
 
 shadowJar {
     zip64 = true
-    exclude "META-INF/**"
+    //exclude "META-INF/**"
     archiveBaseName = project.name
     mergeServiceFiles()
 }
